<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/buttons1"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="10dp"
        android:orientation="horizontal"
        android:requiresFadingEdge="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttons2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonA"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonA"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonB"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonB"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonC"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonC"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonD"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonD"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonE"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonE"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonF"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonG"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonG"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonH"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonH"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons2"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonI"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonI"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonJ"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonJ"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonK"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonK"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonL"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonL"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonM"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonM"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonN"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonN"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonO"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonO"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonP"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonP"
            android:textSize="24sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/inputA"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:cursorVisible="false"
        android:digits="0123456789ABCDEFGHIJKLMNOP"
        android:ems="10"
        android:hint="@string/input_a"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/inputB"
        app:layout_constraintEnd_toStartOf="@+id/delbutton1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputB"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:cursorVisible="false"
        android:digits="ABCDEFGHIJKLMNOP"
        android:ems="10"
        android:hint="@string/input_b"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/delbutton2"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/inputA" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintEnd_toStartOf="@+id/inputB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputA" />

    <Button
        android:id="@+id/delbutton1"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputA"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delbutton2"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputB"
        app:layout_constraintTop_toBottomOf="@+id/delbutton1" />

    <ListView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fadeScrollbars="true"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="10dp"
        android:requiresFadingEdge="vertical"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toTopOf="@+id/buttons1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputB" />

</android.support.constraint.ConstraintLayout>